:sparkles: feat: adiciona Error Prone da Google